# bread

./: .gitignore  README.md  bread_gen.json  package.json  test_exe.json
bread_gen.esy.lock/: index.json
esy.lock/: index.json
lib/bread/: Bread.re  Option.re  dune
notes/: README.md  infix.md  option.md  overview.md  todo.md
scripts/: bash-utils  format  gen
src/bread_config/: BC_Infix.re  BC_Option.re  Files.re  Init.re  M.re  ModuleDef.re  Registry.re  dune
src/bread_config/builders/: CamlArrayBuilder.re  CamlBuilder.re  CamlListBuilder.re  CharBuilder.re  GraphBuilder.re  GraphWeightedBuilder.re  IntBuilder.re  ListBuilder.re  MapBuilder.re  MutableGraphBuilder.re  OptionBuilder.re  ResultBuilder.re  SetBuilder.re  StringBuilder.re
src/bread_core/: Components.re  Const.re  Inline.re  Loop.re  Utils.re  dune
src/bread_core/types/: FantasyLand.re
src/bread_gen/: BreadGen.re  dune
src/core/: Caml.re  Components.re  Inline.re  Render.re  String2.re  Types.re  dune
templates/: mutable_graph
templates/graph/: addDirected  addUndirected  dfs  empty  getEdges  getNodes  t
templates/graph_weighted/: addDirected  addNode  addUndirected  dfs  dfsExit  dfsKind  getEdges  t
templates/string/: contains  indexOf  indexOfInt  indexOfInternal  lastIndexOf  lastIndexOfInt  split
test.esy.lock/: index.json
test_exe.esy.lock/: index.json
tests/: BreadConfig_test.re  Bread_test.re  Graph_test.re  Map_test.re  Set_test.re  String_test.re  TestFramework.re  dune
tests/__snapshots__/: Bread_Config.097e493f.0.snapshot  Example.95e7caf8.0.snapshot
(+7 files in other folders)
