(library
  (name Tests)
  (ocamlopt_flags -linkall -g -w -9-27)
  (ocamlc_flags -w -9-27)
  (libraries
    Bread
    BreadConfig
    Core
    rely.lib
  )
  (modules :standard \ TestExe)
)
(executable
  (name TestExe)
  (ocamlc_flags -w -9-27)
  (ocamlopt_flags -w -9-27)
  (libraries Tests)
  (modules TestExe)
)
(include_subdirs unqualified)
